@@ -1,5 +1,8 @@
 Changes with Apache 1.3.2
 
+  *) SECURITY: Eliminate O(n^2) space DoS attacks (and other O(n^2)
+     cpu time attacks) in header parsing.  [Dean Gaudet]
+
   *) SECURITY: Added default limits for various aspects of reading a
      client request to avoid some simple denial of service attacks,
      including limits on maximum request-line size, number of header
